Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

01-Sep-2010 Andrew Eddie (and Happy 5th Birthday Joomla!)
 # Fixed issue [#22118] The setRedirect method() overwrites an already set messageType (Roland Dalmulder, Artyom Bisyarin).

31-Aug-2010 Jean-Marie Simonet
 # [#22150] hathor menu type - unable to select type. Thanks Bill.
 # [#22161] edit article - show icons and + param missing 
 # [#21932] checkall-toggle does not work with Hathor template on User Manager: Users screen. Thanks Andrea.
 # [#20920] Featured Button Missing on Front End Article Submission. Thanks Hannes.
 $ Reordered front-end en-GB.ini strings
 $ Modified publish/unpublish to enable/disable in Extension Manager->Manage toolbars
 $ [#22156] edit weblink - order description missing. Thanks Bill.
 $ [#22152] permissions edit terms inconsistency. Thanks Bill.
 
30-Aug-2010 Jean-Marie Simonet
 # [#22050] useful joomla links menu. Thanks Bill.
 # [#22046] cannot unblock users. Thanks Michael and Dennis.

30-Aug-2010 Andrew Eddie
 # Fixed issue [#21952] JButtonLink does not set toolbar id correctly (Daniel Reibelt, Hannes Papenberg).
 # Fixed issue [#21868] 500 bad query error on saving a template style not assigned to anything (Elin Waring).
 # Fixed issue [#20468] Featured Articles editing returns to articles pages (Greg Daynes, Hannes Papenberg).
 # Fixed issue [#21999] Error on creating a group with an existing name (Elin Waring).
 # Fixed issue [#22102] E-mail field in contact editing does not validate (Roland Dalmulder).

29-Aug-2010 Jean-Marie Simonet
 # [#22023] Enlarge inputbox for article title on modal select. 
 # [#22104] hathor col fix. Thanks Bill.

28-Aug-2010 Mark Dexter
 # [#17689] Menu Creation - "Contained in Menu" set to main menu
 # [#21819] Cannot save editted article using frontend with cache enabled
