@@ -18,6 +18,8 @@ PLG_DEBUG_FIELD_PROFILING_DESC="Display the profiling waypoints."
 PLG_DEBUG_FIELD_PROFILING_LABEL="Show Profiling"
 PLG_DEBUG_FIELD_QUERIES_DESC="Display a list the queries executed while displaying the page."
 PLG_DEBUG_FIELD_QUERIES_LABEL="Show Queries"
+PLG_DEBUG_FIELD_QUERY_TYPES_DESC="Display a list of unique query types and their number of occurrences for the current page. Useful for finding out about repeated queries that are either redundant or which can be grouped into a single, more efficient query."
+PLG_DEBUG_FIELD_QUERY_TYPES_LABEL="Show Query Types"
 PLG_DEBUG_FIELD_STRIP_FIRST_DESC="In multi-word strings, always strip the first word."
 PLG_DEBUG_FIELD_STRIP_FIRST_LABEL="Strip First Word"
 PLG_DEBUG_FIELD_STRIP_PREFIX_DESC="Strip words from the beginning of the string. For multiple words, use the format: (word1|word2)"
@@ -30,8 +32,11 @@ PLG_DEBUG_LANGUAGE_FILES_LOADED="Language Files Loaded"
 PLG_DEBUG_MEMORY_USAGE="Memory Usage"
 PLG_DEBUG_PROFILE_INFORMATION="Profile Information"
 PLG_DEBUG_QUERIES_LOGGED="%d Queries Logged"
+PLG_DEBUG_QUERY_TYPES_LOGGED="%d Query Types Logged, Sorted by Occurrences DESC"
+PLG_DEBUG_SELECT_QUERIES="SELECT Tables:"
+PLG_DEBUG_OTHER_QUERIES="OTHER Tables:"
+PLG_DEBUG_QUERY_TYPE_AND_OCCURRENCES="%2$d &#215; %1$s"
 PLG_DEBUG_UNKNOWN_FILE="Unknown file"
 PLG_DEBUG_UNTRANSLATED_STRINGS="Untranslated Strings"
 PLG_DEBUG_XML_DESCRIPTION="This plugin provides a variety of system information and assistance for the creation of translation files."
 PLG_SYSTEM_DEBUG="System - Debug"
-
